--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ chardet==3.0.4
 click==6.7
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
+flask_script==2.0.6
+flask_migrate==2.1.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-pkg-resources==0.0.0
 requests==2.18.4
 SQLAlchemy==1.2.7
 urllib3==1.22
